- Fixed unreferenced UI bug caused by importing DoTween

--- a/Klak.Timeline.Midi.csproj
+++ b/Klak.Timeline.Midi.csproj
@@ -78,6 +78,12 @@
     <Reference Include="Unity.Timeline">
       <HintPath>B:/Unity Projects/Musika/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEditor.UI">
+      <HintPath>B:/Unity Projects/Musika/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>B:/Unity Projects/Musika/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.ARModule">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.2.4f1/Editor/Data/Managed/UnityEngine/UnityEngine.ARModule.dll</HintPath>
     </Reference>
@@ -200,9 +206,6 @@
     </Reference>
     <Reference Include="DOTweenEditor">
       <HintPath>B:/Unity Projects/Musika/Assets/Plugins/Demigiant/DOTween/Editor/DOTweenEditor.dll</HintPath>
-    </Reference>
-    <Reference Include="DOTweenUpgradeManager">
-      <HintPath>B:/Unity Projects/Musika/Assets/Plugins/Demigiant/DOTween/Editor/DOTweenUpgradeManager.dll</HintPath>
     </Reference>
     <Reference Include="DOTween">
       <HintPath>B:/Unity Projects/Musika/Assets/Plugins/Demigiant/DOTween/DOTween.dll</HintPath>
