--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,21 +63,24 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Beat.cs" />
     <Compile Include="Assets\Scripts\Singleton\sceneloader.cs" />
     <Compile Include="Assets\Scripts\Singleton\SingletonManager.cs" />
     <Compile Include="Assets\Scripts\Singleton\Test.cs" />
     <Compile Include="Assets\Scripts\Singleton\Test2.cs" />
     <Compile Include="Assets\Scripts\Singleton\TimeManagerTester.cs" />
     <Compile Include="Assets\Scripts\Singleton\TimerManager.cs" />
+    <Compile Include="Assets\Scripts\Spawners\BeatSpawner.cs" />
+    <Compile Include="Assets\Scripts\Spawners\ObjectPooler.cs" />
     <None Include="Assets\Keijiro\link.xml" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>B:/Unity Projects/Musika/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.Timeline">
-      <HintPath>B:/Unity Projects/Musika/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>B:/Unity Projects/Musika/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Timeline">
+      <HintPath>B:/Unity Projects/Musika/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
       <HintPath>B:/Unity Projects/Musika/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
