--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\BeatFeedbackTextSpawner.cs" />
     <Compile Include="Assets\BeatInteractor.cs" />
     <Compile Include="Assets\Scripts\BeatIndexer.cs" />
     <Compile Include="Assets\Scripts\BeatIndexerManager.cs" />
@@ -91,6 +92,12 @@
     </Reference>
     <Reference Include="UnityEditor.UI">
       <HintPath>B:/Unity Projects/Musika/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.TextMeshPro.Editor">
+      <HintPath>B:/Unity Projects/Musika/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.TextMeshPro">
+      <HintPath>B:/Unity Projects/Musika/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.ARModule">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.2.4f1/Editor/Data/Managed/UnityEngine/UnityEngine.ARModule.dll</HintPath>
