--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Compile Include="Assets\Combo.cs" />
     <Compile Include="Assets\Resource.cs" />
+    <Compile Include="Assets\ResourceText.cs" />
     <Compile Include="Assets\Scripts\BeatFeedbackText.cs" />
     <Compile Include="Assets\Scripts\BeatFeedbackTextSpawner.cs" />
     <Compile Include="Assets\Scripts\BeatIndexer.cs" />
