--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Combo.cs" />
+    <Compile Include="Assets\GameManager.cs" />
     <Compile Include="Assets\LessonGradeCalculator.cs" />
     <Compile Include="Assets\Life.cs" />
     <Compile Include="Assets\Resource.cs" />
