--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Assets\GameManager.cs" />
     <Compile Include="Assets\LessonGradeCalculator.cs" />
     <Compile Include="Assets\Life.cs" />
+    <Compile Include="Assets\PlayerData.cs" />
     <Compile Include="Assets\Resource.cs" />
     <Compile Include="Assets\ResourceText.cs" />
     <Compile Include="Assets\Score.cs" />
@@ -79,7 +80,7 @@
     <Compile Include="Assets\Scripts\ScriptableObjects\SongData.cs" />
     <Compile Include="Assets\Scripts\SongDataGenerator.cs" />
     <Compile Include="Assets\Scripts\SpawnPositionSetter.cs" />
-    <Compile Include="Assets\Scripts\Systems\Singleton\sceneloader.cs" />
+    <Compile Include="Assets\Scripts\Systems\Singleton\SceneLoader.cs" />
     <Compile Include="Assets\Scripts\Systems\Singleton\SingletonManager.cs" />
     <Compile Include="Assets\Scripts\Systems\Singleton\Test.cs" />
     <Compile Include="Assets\Scripts\Systems\Singleton\Test2.cs" />
@@ -88,6 +89,7 @@
     <Compile Include="Assets\Scripts\Systems\Spawners\BeatSpawner.cs" />
     <Compile Include="Assets\Scripts\Systems\Spawners\ObjectPooler.cs" />
     <Compile Include="Assets\Scripts\Systems\Spawners\TongatongBeatSpawner.cs" />
+    <Compile Include="Assets\Scripts\Tongatong.cs" />
     <Compile Include="Assets\Scripts\TongatongSpawnSetter.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
