--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,23 +63,28 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Combo.cs" />
     <Compile Include="Assets\GameManager.cs" />
-    <Compile Include="Assets\LessonGradeCalculator.cs" />
-    <Compile Include="Assets\Life.cs" />
-    <Compile Include="Assets\PlayerData.cs" />
-    <Compile Include="Assets\Resource.cs" />
-    <Compile Include="Assets\ResourceText.cs" />
-    <Compile Include="Assets\Score.cs" />
-    <Compile Include="Assets\Scripts\BeatFeedbackText.cs" />
-    <Compile Include="Assets\Scripts\BeatFeedbackTextSpawner.cs" />
-    <Compile Include="Assets\Scripts\BeatIndexer.cs" />
-    <Compile Include="Assets\Scripts\BeatIndexerManager.cs" />
-    <Compile Include="Assets\Scripts\BeatInteractor.cs" />
+    <Compile Include="Assets\Prefabs\Objects\InputManager.cs" />
+    <Compile Include="Assets\Prefabs\Objects\TouchControls.cs" />
+    <Compile Include="Assets\Scripts\Combo.cs" />
+    <Compile Include="Assets\Scripts\IInteractable.cs" />
+    <Compile Include="Assets\Scripts\LessonGradeCalculator.cs" />
+    <Compile Include="Assets\Scripts\Life.cs" />
+    <Compile Include="Assets\Scripts\Objects\BeatFeedbackText.cs" />
+    <Compile Include="Assets\Scripts\Objects\BeatFeedbackTextSpawner.cs" />
+    <Compile Include="Assets\Scripts\Objects\BeatIndexer.cs" />
+    <Compile Include="Assets\Scripts\Objects\BeatIndexerManager.cs" />
+    <Compile Include="Assets\Scripts\Objects\BeatInteractor.cs" />
     <Compile Include="Assets\Scripts\Objects\Beats\Beat.cs" />
+    <Compile Include="Assets\Scripts\Objects\SongDataGenerator.cs" />
+    <Compile Include="Assets\Scripts\Objects\SpawnPositionSetter.cs" />
+    <Compile Include="Assets\Scripts\Objects\Tongatong.cs" />
+    <Compile Include="Assets\Scripts\Objects\TongatongSpawnSetter.cs" />
+    <Compile Include="Assets\Scripts\PlayerData.cs" />
+    <Compile Include="Assets\Scripts\Resource.cs" />
+    <Compile Include="Assets\Scripts\ResourceText.cs" />
+    <Compile Include="Assets\Scripts\Score.cs" />
     <Compile Include="Assets\Scripts\ScriptableObjects\SongData.cs" />
-    <Compile Include="Assets\Scripts\SongDataGenerator.cs" />
-    <Compile Include="Assets\Scripts\SpawnPositionSetter.cs" />
     <Compile Include="Assets\Scripts\Systems\Singleton\SceneLoader.cs" />
     <Compile Include="Assets\Scripts\Systems\Singleton\SingletonManager.cs" />
     <Compile Include="Assets\Scripts\Systems\Singleton\Test.cs" />
@@ -89,8 +94,6 @@
     <Compile Include="Assets\Scripts\Systems\Spawners\BeatSpawner.cs" />
     <Compile Include="Assets\Scripts\Systems\Spawners\ObjectPooler.cs" />
     <Compile Include="Assets\Scripts\Systems\Spawners\TongatongBeatSpawner.cs" />
-    <Compile Include="Assets\Scripts\Tongatong.cs" />
-    <Compile Include="Assets\Scripts\TongatongSpawnSetter.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Properties.cginc" />
