- Fixed life deduction value bugs - Added lifebar feature

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Compile Include="Assets\ComboEffect.cs" />
     <Compile Include="Assets\GameManager.cs" />
+    <Compile Include="Assets\Lifebar.cs" />
     <Compile Include="Assets\Prefabs\Objects\InputManager.cs" />
     <Compile Include="Assets\Prefabs\Objects\TouchControls.cs" />
     <Compile Include="Assets\ScoreEffect.cs" />
