--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Assets\ButtonObject.cs" />
     <Compile Include="Assets\ButtonTab.cs" />
     <Compile Include="Assets\ComboEffect.cs" />
+    <Compile Include="Assets\GabbangAnimator.cs" />
     <Compile Include="Assets\GameManager.cs" />
     <Compile Include="Assets\GameOverButtons.cs" />
     <Compile Include="Assets\Kolitong.cs" />
