- Testing color transitioners ( success), WIP just have to manually select color - Successfully fixed scene transitioning bug ( have QA check )

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -75,10 +75,10 @@
     <Compile Include="Assets\KolitongManager.cs" />
     <Compile Include="Assets\Lifebar.cs" />
     <Compile Include="Assets\LightManager.cs" />
-    <Compile Include="Assets\NotebookButtons.cs" />
     <Compile Include="Assets\PlayerData.cs" />
     <Compile Include="Assets\Prefabs\Objects\InputManager.cs" />
     <Compile Include="Assets\Prefabs\Objects\TouchControls.cs" />
+    <Compile Include="Assets\SceneTransitioner.cs" />
     <Compile Include="Assets\ScoreEffect.cs" />
     <Compile Include="Assets\Scripts\BeatEffect.cs" />
     <Compile Include="Assets\Scripts\Combo.cs" />
